--- a/Stocky.Client/Components/Layout/NavMenu.razor
+++ b/Stocky.Client/Components/Layout/NavMenu.razor
@@ -25,7 +25,7 @@
     </MudNavLink>
 
     <MudNavLink Href="create-pocket" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">
-        Adding CreatingPocket
+        Adding Pocket
     </MudNavLink>
 
     <MudSpacer/>
