--- a/Stocky.Client/Components/Pages/UserPage.razor
+++ b/Stocky.Client/Components/Pages/UserPage.razor
@@ -50,7 +50,7 @@ else
             <MudTh>Phone</MudTh>
             <MudTh>Address</MudTh>
             <MudTh>Orders</MudTh>
-            <MudTh>CreatingPockets</MudTh>
+            <MudTh>Pockets</MudTh>
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate>
