--- a/Stocky.Client/Components/Pages/Products.razor
+++ b/Stocky.Client/Components/Pages/Products.razor
@@ -12,13 +12,13 @@
 
 <div class="mb-4 d-flex gap-2">
     <MudTextField @bind-Value="_searchQuery"
-                  Placeholder="GetCreatingPocketBySearch by name, phone, etc..."
+                  Placeholder="GetAddingPocketBySearch by name, phone, etc..."
                   Adornment="Adornment.Start"
                   AdornmentIcon="@Icons.Material.Filled.Search"
                   Immediate="true"
                   OnKeyDown="HandleKeyDown"
                   Margin="Margin.Dense"/>
-    <MudButton OnClick="SearchProduct" Color="Color.Primary" Variant="Variant.Filled">GetCreatingPocketBySearch</MudButton>
+    <MudButton OnClick="SearchProduct" Color="Color.Primary" Variant="Variant.Filled">GetAddingPocketBySearch</MudButton>
 </div>
 
 @if (_isLoading)
