--- a/Stocky.Client/Components/Pages/UserPage.razor
+++ b/Stocky.Client/Components/Pages/UserPage.razor
@@ -87,9 +87,9 @@ else
     private int _currentPage = 1;
     private int _totalPages = 1;
     private const int PageSize = 15;
-    private bool _isLoading = false;
+    private bool _isLoading;
     private string _searchQuery = "";
-    private bool _isAuthenticated = false;
+    private bool _isAuthenticated;
 
     protected override async Task OnInitializedAsync()
     {
@@ -169,7 +169,7 @@ else
             {
                 var json = await response.Content.ReadAsStringAsync();
                 var results = JsonSerializer.Deserialize<List<User>>(json, new JsonSerializerOptions { PropertyNameCaseInsensitive = true });
-                _userPage.Items = results ?? new List<User>();
+                _userPage.Items = results ?? [];
                 _totalPages = 1;
                 _currentPage = 1;
             }
@@ -222,7 +222,7 @@ else
         var dialog = await DialogService.ShowAsync<DeleteUserDialog>("Confirm Delete", parameters, options);
         var result = await dialog.Result;
 
-        if (!result.Canceled)
+        if (result is { Canceled: false })
         {
             await LoadUsers();
         }
@@ -240,9 +240,12 @@ else
         var dialog = await DialogService.ShowAsync<EditUserDialog>("Edit User", parameters, options);
         var result = await dialog.Result;
 
-        if (!result.Canceled)
+        if (result != null)
         {
-            await LoadUsers();
+            if (!result.Canceled)
+            {
+                await LoadUsers();
+            }
         }
     }
 
@@ -254,7 +257,7 @@ else
         var dialog = await DialogService.ShowAsync<CreateUserDialog>("Create User", parameters, options);
         var result = await dialog.Result;
 
-        if (!result.Canceled)
+        if (result is { Canceled: false })
         {
             await LoadUsers();
         }
